Closes-Bug:#1649482 - The setting modal window is getting misaligned in Safari browser on clicking on setting Icon

--- a/webroot/common/ui/css/contrail.custom.css
+++ b/webroot/common/ui/css/contrail.custom.css
@@ -1373,7 +1373,6 @@ color settings styles - begin
 .modal-popover {
     margin: 0px!important;
 }
-
 #settings_modal .modal-header .modal-footer {
     border: none;
     padding: 8px 0px 0px 0px;
@@ -1398,6 +1397,7 @@ color settings styles - begin
 }
 #settings_modal {
     width: 280px!important;
+    height:auto!important;
 }
 #settings_modal h6.modal-header i {
     font-size: 20px;
@@ -1509,7 +1509,6 @@ color settings styles - begin
     border-color: #6482bd!important;
     padding: 0px 10px;
 }
-
 /*
 color settings styles - end
 */
